--- a/01-gallery.html
+++ b/01-gallery.html
@@ -12,71 +12,7 @@
     <p><a href="index.html">Go back</a></p>
 
     <!-- Add gallery items to this list -->
-    <ul class="gallery">
-      <li>
-        <div class="gallery__item">
-          <a class="gallery__link">
-            <img class="gallery__image" />
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class = "gallery__item">
-          <a class = "gallery__link">
-            <img class = "gallery__image"/>
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="gallery__item">
-          <a class="gallery__link">
-            <img class="gallery__image" />
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="gallery__item">
-          <a class="gallery__link">
-            <img class="gallery__image" />
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="gallery__item">
-          <a class="gallery__link">
-            <img class="gallery__image" />
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="gallery__item">
-          <a class="gallery__link">
-            <img class="gallery__image" />
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="gallery__item">
-          <a class="gallery__link">
-            <img class="gallery__image" />
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="gallery__item">
-          <a class="gallery__link">
-            <img class="gallery__image" />
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="gallery__item">
-          <a class="gallery__link">
-            <img class="gallery__image" />
-          </a>
-        </div>
-      </li>
-    </ul>
+    <ul class="gallery"></ul>
 
     <script src="js/01-gallery.js" type="module"></script>
   </body>
